sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:6: error: type mismatch;
 found   : Int(0)
 required: Boolean
  while(ecart>=1 || a>0){
                      ^AlgCombSort:9: error: type mismatch;
 found   : Int(0)
 required: Boolean
    a=0
      ^