sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.code
def combSort() {
  var ecart:Int = getNombreValeurs()
  var a :Boolean = false
  var i:Int=0
  while(ecart>=1 || a>0){
    a=true
    i=0
    a=0
    while(i+ecart<getNombreValeurs()){
      if(!plusPetit(i,i+ecart)){
        echange(i,i+ecart)
        a=false

      }
      i=i+1
    }
    ecart = (ecart.toDouble / 1.3).toInt
  }
}